fixed column alignment

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -33,3 +33,13 @@ table {
 footer {
 	background-color: #FFFFFF;
 }
+
+.col-centered {
+	display: block;
+	float: none;
+	margin: 0 auto;
+}
+
+.text-ctr {
+	text-align: center;
+}
